test/domains/compilerErrors/constDomain5.chpl
const d : domain(rank=2, stridable=true);
d.clear();
